# pygcc

./: tasks.md
pygcc/: pyproject.toml
pygcc/src/pygcc/: application.py  application_listener.py  config.py  event_manager.py  events.py  game_state_manager.py  level_manager.py  renderer.py  timestep.py
pygcc/src/pygcc/base/: base_game.py  base_game_app.py
pygcc/src/pygcc/game_logic_state/: __init__.py  game_logic_state.py  initializing.py  loading_game_environment.py  main_menu.py  waiting_for_players.py
pygcc/src/pygcc/level_resource/: world.json
pygcc/src/pygcc/ui/: button.py  main_menu_ui.py  screen_element.py
pygcc/src/pygcc/views/: game_view.py  human_view.py  main_menu_view.py  teaport_wars_human_view.py
teapot_wars/: pyproject.toml
teapot_wars/assets/level_resource/: world.json
teapot_wars/assets/scripts/: LevelInit.json
teapot_wars/src/teapot_wars/: __main__.py  main.py  teaport_wars_app.py  teaport_wars_game.py
teapot_wars/src/teapot_wars/game_logic_states/: __init__.py  main_menu.py  waiting_for_players.py
