[tool.poetry]
name = "pygcc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pygcc", from = "src"}]

[tool.poetry.scripts]
main = "pygcc.main:main"

[tool.poetry.dependencies]
python = "^3.11"
pygame  = "2.1.3.dev8"
autopep8 = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
